# celerix-git-gui

./: .gitignore  CONTRIBUTING.md  README.md  go.mod  go.sum  index.html  main.go  package.json  vite.config.ts  wails.json
.github/workflows/: release.yml
backend/: app.go  git.go  ssh.go  system.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  vite.config.ts
frontend/src/: main.ts
frontend/src/assets/: base.css
frontend/src/components/Common/: GlobalAlert.vue
frontend/src/components/GitGui/: BranchView.vue  ChangesView.vue  CommitView.vue  GitInitModal.vue  GitSettingsModal.vue  GitStatusBar.vue  GitTagModal.vue  (+4 more)
frontend/src/composables/: useAlerts.ts  useGitActions.ts  useRepoStats.ts  useRepoTabs.ts
frontend/src/services/: color-scheme.ts  events.ts
frontend/src/types/: git.types.ts
frontend/src/views/: GitGui.vue  HomeView.vue
frontend/wailsjs/go/: models.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  main.rs
src/assets/: base.css
src/components/: CopyToClipboard.vue
src/components/Basic/: ConfirmationModal.vue  PromptModal.vue
src/components/GitGui/: GitCommitDetails.vue  GitCommitFileDiff.vue  GitCommitHistory.vue  GitCreateBranchModal.vue  GitCreateTagModal.vue  GitDeleteBranchModal.vue  GitDiffViewer.vue  GitLocalChanges.vue  GitSettingsModal.vue  GitSidebar.vue  GitStashModal.vue  GitStatusBar.vue  types.ts
src/router/: index.ts
src/router/routes/: basic.ts  index.ts
src/views/: GitGuiView.vue
(+22 files in other folders)
