[package]
name = "Celerix"
version = "0.1.0"
description = "Celerix GitGUI"
authors = ["Celerix"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "celerix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
gix = { version = "0.77.0", features = ["max-performance-safe"] }
reqwest = { version = "0.13.1", features = ["json"] }
md5 = "0.8.0"
tokio = { version = "1.49.0", features = ["process", "fs", "rt-multi-thread"] }

